// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`express integration reqContext fails validation based on req values 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"id\\" fails because [\\"id\\" must be one of [context:params.userId]]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "id",
    ],
    "source": "body",
  },
}
`;

exports[`express integration validations req.body 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"last\\" fails because [\\"last\\" must be a string]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "last",
    ],
    "source": "body",
  },
}
`;

exports[`express integration validations req.cookies 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"state\\" fails because [\\"state\\" must be a number]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "state",
    ],
    "source": "cookies",
  },
}
`;

exports[`express integration validations req.headers 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"accept\\" fails because [\\"accept\\" with value \\"application&#x2f;json\\" fails to match the required pattern: /xml/]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "accept",
    ],
    "source": "headers",
  },
}
`;

exports[`express integration validations req.params 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"id\\" fails because [\\"id\\" must only contain alpha-numeric and underscore characters]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "id",
    ],
    "source": "params",
  },
}
`;

exports[`express integration validations req.query 1`] = `
Object {
  "error": "Bad Request",
  "message": "\\"end\\" is not allowed",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "end",
    ],
    "source": "query",
  },
}
`;

exports[`express integration validations req.signedCookies 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"secureState\\" fails because [\\"secureState\\" is required]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "secureState",
    ],
    "source": "signedCookies",
  },
}
`;
